Added upvote and downvote functions to app, added buttons to movieposter that are clickable, made background of buttons transparent

--- a/src/MoviePoster/MoviePoster.css
+++ b/src/MoviePoster/MoviePoster.css
@@ -12,9 +12,19 @@
     padding: 9px;
 }
 
-img {
+.MoviePosterImg {
     object-fit: cover;
     width: 270px;
     border-radius: 10px 10px 0px 0px;
 }
 
+.VoteButton {
+    height: 20px;
+    width: 20px;
+}
+
+button {
+    background-color: transparent;
+    border: transparent;
+   
+}
