Fixxed css for movie details page content, moved home icon to h1 in app and conditionally renders

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -18,6 +18,7 @@ h1 {
   color: white;
   font-size: 56px;
   letter-spacing: 5px;
+  display: contents;
 }
 
 p {
@@ -26,3 +27,4 @@ p {
   margin-top: 50px;
   color: white;
 }
+
