--- a/src/MoviePoster/MoviePoster.css
+++ b/src/MoviePoster/MoviePoster.css
@@ -18,7 +18,12 @@
     border-radius: 10px 10px 0px 0px;
 }
 
-.VoteButton {
+.UpVoteButton {
+    height: 20px;
+    width: 20px;
+}
+
+.DownVoteButton {
     height: 20px;
     width: 20px;
 }
