--- a/src/MovieDetails/MovieDetails.css
+++ b/src/MovieDetails/MovieDetails.css
@@ -30,7 +30,7 @@
     text-align: center;
     letter-spacing: 5px;
     color: #3e49b1;
-    padding: 20px;
+    padding: 10px 20px 10px 20px;
     font-size: xx-large;
 }
 
