--- a/src/MoviePoster/MoviePoster.css
+++ b/src/MoviePoster/MoviePoster.css
@@ -31,5 +31,9 @@
 button {
     background-color: transparent;
     border: transparent;
-   
+}
+
+.MoviePoster:hover {
+    background-color: rgb(255, 204, 0);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
 }
